--- a/src/i18n/de/dashboard-projects.json
+++ b/src/i18n/de/dashboard-projects.json
@@ -41,5 +41,18 @@
   "This feature will become available soon.": "Diese Funktion wird bald verfügbar sein.",
   "User Profile Message": "Bitte vervollständige Dein Benutzerprofil. Ohne Nickname oder vollständigen Namen erscheinst Du für andere Benutzer anonym.",
   "Complete Profile": "Zum Profil",
-  "User Profile": "Unvollständiges Benutzerprofil"
+  "User Profile": "Unvollständiges Benutzerprofil",
+  "Create Project": "Create Project",
+  "Create": "Create",
+  "Project Name": "Project Name",
+  "Name your project": "Name your project",
+  "Project Description": "Project Description",
+  "Describe your project": "Describe your project",
+  "Open Join": "Open Join",
+  "Open Edit": "Open Edit",
+  "open-join-info": "With 'Open Join' switched on, any registered user can join your project without an invitation.",
+  "open-edit-info": "With 'Open Edit' switched on, any member of your project can edit the default assignment.",
+  "Join": "Join",
+  "Join Project": "Join Project",
+  "Join Project Message": "This project allows all users to become members. Would you like to join?"
 }
