--- a/src/i18n/en/project-settings.json
+++ b/src/i18n/en/project-settings.json
@@ -1,6 +1,5 @@
 {
   "Project Settings": "Project Settings",
-
   "Tagging Vocabulary": "Tagging Vocabulary",
   "You can pre-define a tagging vocabulary": "You can pre-define a tagging vocabulary for this project by copying and pasting terms into the text area below, one term per line.",
   "The terms will appear as autocomplete options": "The terms will appear as autocomplete options when users create new tags in the annotation interface. Please note that users will still be able to add their own tags, too.",
@@ -8,6 +7,12 @@
   "Save": "Save",
   "Error loading tag vocabulary.": "Error loading tag vocabulary.",
   "Error saving tag vocabulary.": "Error saving tag vocabulary.",
-
-  "Something went wrong": "Something went wrong"
+  "Name and Access Settings": "Name and Access Settings",
+  "Open Join": "Open Join",
+  "Open Edit": "Open Edit",
+  "open-join-info": "With 'Open Join' switched on, any registered user can join your project without an invitation.",
+  "open-edit-info": "With 'Open Edit' switched on, any member of your project can edit the default assignment.",
+  "Something went wrong": "Something went wrong",
+  "Project Name": "Project Name",
+  "Project Description": "Project Description"
 }
