--- a/src/i18n/en/user-management.json
+++ b/src/i18n/en/user-management.json
@@ -2,7 +2,7 @@
   "Remove_name": "Are you sure you want to remove ${name} from the project?",
   "First Name": "First Name",
   "Last Name": "Last Name",
-  "Nickname": "Nickname",
+  "Display Name": "Display Name",
   "Access Level": "Access Level",
   "Anonymous team member": "Anonymous team member",
   "You": "You",
@@ -18,5 +18,6 @@
   "Delete User": "Delete User",
   "Delete_Warning_Message": "Deleting a user in not reversible. The user will no longer be able to login and their content will be anonymized. Do you wish to proceed?",
   "Cancel": "Cancel",
-  "User successfully deleted.": "User successfully deleted."
+  "User successfully deleted.": "User successfully deleted.",
+  "Back to Projects": "Back to Projects"
 }
