Added basic manifest validation + error dialog

--- a/src/i18n/de/annotation-common.json
+++ b/src/i18n/de/annotation-common.json
@@ -1,4 +1,5 @@
 {
+  "Error": "Fehler",
   "Show annotation list": "Annotationsliste anzeigen",
   "Show annotation filter and color configuration": "Filter- und Farbeinstellungen anzeigen",
   "Anonymous": "Anonym",
