--- a/src/i18n/en/annotation-common.json
+++ b/src/i18n/en/annotation-common.json
@@ -1,4 +1,5 @@
 {
+  "Error": "Error",
   "Show annotation list": "Show annotation list",
   "Show annotation filter and color configuration": "Show annotation filter and color configuration",
   "Anonymous": "Anonymous",
