Localized labels for IIIF import dialog

--- a/src/i18n/de/project-home.json
+++ b/src/i18n/de/project-home.json
@@ -33,10 +33,17 @@
   "Notes": "Notizen",
   "File upload": "Datei hochladen (unterstützte Formate: Text, TEI, PDF, Bild)",
   "From IIIF image manifest": "IIIF Image Manifest importieren",
-  "No presentation manifests": "Derzeit werden ausschließlich Einzelbilder unterstützt, keine Sammlungen nach dem IIIF Presentation Standard.",
+  "IIIF import hint": "Import von Einzelbildern (IIIF Image Manifest) oder Bilderserien (IIIF Presentation Manifest).",
   "Import IIIF": "IIIF Importieren",
-  "Paste URL to a IIIF image manifest": "URL zu einem IIIF Bild-Manifest",
+  "Paste URL to a IIIF manifest": "URL zu einem IIIF Bild- oder Presentation-Manifest",
   "Please enter a valid IIIF manifest URL": "Bitte eine gültige IIIF Manifest URL eingeben",
+  "invalid_url": "Ungültige URL",
+  "not_https": "HTTPS URL erforderlich",
+  "fetch_error": "Downloadfehler",
+  "invalid_manifest": "Kein gültiges IIIF Manifest",
+  "unsupported_manifest_type": "Nicht unterstützter Manifest-Typ",
+  "Validating manifest": "Validiere Manifest...",
+  "Valid manifest:": "Gültiges Manifest:",
   "Importing ${n} items": "Importiere ${n} Dateien",
   "Something went wrong": "Etwas ist schiefgelaufen",
   "Could not create the document.": "Das Dokument konnte nicht erstellt werden.",
