--- a/src/i18n/en/project-home.json
+++ b/src/i18n/en/project-home.json
@@ -33,10 +33,17 @@
   "Notes": "Notes",
   "File upload": "File upload (supported formats: text, TEI, PDF, image)",
   "From IIIF image manifest": "From IIIF manifest",
-  "No presentation manifests": "Please note that there is currently support for IMAGE manifest only, but not PRESENTATION manifests.",
+  "IIIF import hint": "Import single images (IIIF image manifest) or image series (IIIF presentation manifest).",
   "Import IIIF": "Import IIIF",
-  "Paste URL to a IIIF image manifest": "Paste URL to a IIIF image manifest",
+  "Paste URL to a IIIF manifest": "Paste URL to a IIIF image or presentation manifest",
   "Please enter a valid IIIF manifest URL": "Please enter a valid IIIF manifest URL",
+  "invalid_url": "Invalid URL",
+  "not_https": "HTTPS URL required",
+  "fetch_error": "Could not download manifest",
+  "invalid_manifest": "Not a valid IIIF manifest",
+  "unsupported_manifest_type": "Unsupported manifest type",
+  "Validating manifest": "Validating manifest",
+  "Valid manifest:": "Valid manifest:",
   "Importing ${n} items": "Importing ${n} items",
   "Something went wrong": "Something went wrong",
   "Could not create the document.": "Could not create the document.",
