--- a/src/i18n/de/project-sidebar.json
+++ b/src/i18n/de/project-sidebar.json
@@ -5,5 +5,6 @@
   "Collaboration": "Projektteam",
   "Assignments": "Arbeitsaufträge",
   "Add Ons": "Add Ons",
-  "Settings": "Einstellungen" 
+  "Settings": "Einstellungen",
+  "Team": "Team"
 }
