--- a/src/i18n/en/project-sidebar.json
+++ b/src/i18n/en/project-sidebar.json
@@ -5,5 +5,6 @@
   "Collaboration": "Collaboration",
   "Assignments": "Assignments",
   "Add Ons": "Add Ons",
-  "Settings": "Settings" 
+  "Settings": "Settings",
+  "Team": "Team"
 }
