Updates to assignment wizard

--- a/src/i18n/en/project-assignments.json
+++ b/src/i18n/en/project-assignments.json
@@ -1,10 +1,11 @@
 {
   "Unnamed Assignment": "Unnamed Assignment",
   "Create a new Assignment": "Create a new Assignment",
-  "1. Documents": "1. Documents",
-  "2. Team": "2. Team",
-  "3. Instructions": "3. Instructions",
-  "4. Verify": "4. Verify",
+  "1. General": "1. General",
+  "2. Documents": "2. Documents",
+  "3. Layers": "3. Layers",
+  "4. Team": "4. Team",
+  "5. Verify": "5. Verify",
   "Cancel": "Cancel",
   "Close": "Close",
   "Next": "Next",
@@ -18,6 +19,7 @@
   "Selected ${n} documents": "Selected ${n} documents",
   "Add people to the assignment.": "Add people to the assignment",
   "Name": "Name",
+  "Instructions": "Instructions",
   "Member since": "Member since",
   "You": "You",
   "Anonymous team member": "Anonymous team member",
@@ -25,7 +27,7 @@
   "Select at least 1 team member": "Select at least 1 team member",
   "Selected 1 team member": "Selected 1 team member",
   "Selected ${n} team members": "Selected ${n} team members",
-  "Add a message": "Add a message or instructions for the team. This step is optional.",
+  "Add a name and instructions for this assignment.": "Add a name and instructions for this assignment.",
   "Almost Ready!": "Almost Ready!",
   "Verify and confirm this assignment.": "Verify and confirm this assignment.",
   "Name:": "Name:",
@@ -53,5 +55,10 @@
   "base_assignment_description": "This assignment is created by default for this project. You can edit this description to describe the intent of the project and any additional instructions.",
   "Delete": "Delete",
   "Are you sure you want to delete this assignment?": "Are you sure you want to delete this assignment?",
-  "Deleting this assignment will remove it from all users and will no longer be visible here.": "Deleting this assignment will remove it from all users and will no longer be visible here."
+  "Deleting this assignment will remove it from all users and will no longer be visible here.": "Deleting this assignment will remove it from all users and will no longer be visible here.",
+  "Import read only layers from other assignments to add to each document.": "Import read only layers from other assignments to add to each document.",
+  "Optional": "Optional",
+  "Select All": "Select All",
+  "Base Assignment": "Base Assignment",
+  "You have not added any team members.": "You have not added any team members."
 }
