--- a/src/i18n/de/project-assignments.json
+++ b/src/i18n/de/project-assignments.json
@@ -1,10 +1,11 @@
 {
   "Unnamed Assignment": "Unbenannter Arbeitsauftrag",
   "Create a new Assignment": "Neuen Arbeitsauftrag erstellen",
-  "1. Documents": "1. Dokumente",
-  "2. Team": "2. Team",
-  "3. Instructions": "3. Anweisungen",
-  "4. Verify": "4. Kontrolle",
+  "1. General": "1. General",
+  "2. Documents": "2. Dokumente",
+  "3. Layers": "3. Layers",
+  "4. Team": "4. Team",
+  "5. Verify": "5. Kontrolle",
   "Cancel": "Abbrechen",
   "Close": "Schließen",
   "Next": "Weiter",
@@ -18,6 +19,7 @@
   "Selected ${n} documents": "${n} Dokumente ausgewählt",
   "Add people to the assignment.": "Weise diesem Arbeitsauftrag ein Projektteam zu.",
   "Name": "Name",
+  "Instructions": "Instructions",
   "Member since": "Mitglied seit",
   "You": "Du",
   "Anonymous team member": "Anonymes Teammitglied",
@@ -25,7 +27,7 @@
   "Select at least 1 team member": "Wähle mindestens 1 Teammitglied",
   "Selected 1 team member": "1 Teammitglied ausgewählt",
   "Selected ${n} team members": "${n} Teammitglieder ausgewählt",
-  "Add a message": "Schreibe dem Team eine Nachricht oder zusätzliche Anweisungen für diesen Arbeitsauftrag. Dieser Schritt ist optional.",
+  "Add a name and instructions for this assignment.": "Add a name and instructions for this assignment.",
   "Almost Ready!": "Fast geschafft!",
   "Verify and confirm this assignment.": "Kontrolliere und bestätige den Arbeitsauftrag.",
   "Name:": "Name:",
@@ -50,5 +52,10 @@
   "Could not open the assignment.": "Der Arbeitsauftrag konnte nicht geöffnet werden.",
   "Edit": "Edit",
   "Project Base Assignment": "Project Base Assignment",
-  "base_assignment_description": "This assignment is created by default for this project. You can edit this description to describe the intent of the project and any additional instructions."
+  "base_assignment_description": "This assignment is created by default for this project. You can edit this description to describe the intent of the project and any additional instructions.",
+  "Import read only layers from other assignments to add to each document.": "Import read only layers from other assignments to add to each document.",
+  "Optional": "Optional",
+  "Select All": "Select All",
+  "Base Assignment": "Base Assignment",
+  "You have not added any team members.": "You have not added any team members."
 }
