Super smooth UI animations

--- a/src/i18n/de/annotation-common.json
+++ b/src/i18n/de/annotation-common.json
@@ -38,7 +38,7 @@
   "newest": "Neueste",
   "oldest": "Älteste",
   "Color by": "Farbschema",
-  "No color coding": "ohne Farbschema",
+  "No color coding": "Ohne Farbschema",
   "Filter by": "Filter",
   "Show all annotations": "Alle Annotationen anzeigen", 
   "Public vs. Private": "Öffentlich vs. Privat",
