--- a/src/i18n/en/dashboard-projects.json
+++ b/src/i18n/en/dashboard-projects.json
@@ -57,5 +57,13 @@
   "Join": "Join",
   "Join Project": "Join Project",
   "Join Project Message": "This project allows all users to become members. Would you like to join?",
-  "You are not a member message": "You are not yet a member of this project, would you like to join?"
+  "You are not a member message": "You are not yet a member of this project, would you like to join?",
+  "assignments": "assignments",
+  "assignment": "assignment",
+  "Public Projects": "Public Projects",
+  "Assignments": "Assignments",
+  "Texts": "Texts",
+  "Images": "Images",
+  "Team": "Team",
+  "Owner": "Owner"
 }
