--- a/src/i18n/en/project-settings.json
+++ b/src/i18n/en/project-settings.json
@@ -14,5 +14,6 @@
   "open-edit-info": "With 'Open Edit' switched on, any member of your project can edit the default assignment.",
   "Something went wrong": "Something went wrong",
   "Project Name": "Project Name",
-  "Project Description": "Project Description"
+  "Project Description": "Project Description",
+  "Plugins": "Plugins"
 }
