--- a/src/i18n/de/annotation-common.json
+++ b/src/i18n/de/annotation-common.json
@@ -1,4 +1,16 @@
 {
+  "Annotations": "Annotationen",
+  "Notes": "Notizen",
+  "Annotation Layers": "Annotations-Ebenen",
+  "Active": "Aktiv",
+  "Read-Only": "Schreibgeschützt",
+  "Baselayer": "Basis-Ebene",
+  "Visibility": "Sichtbarkeit",
+  "All annotations": "Alle Annotationen",
+  "Public annotations only": "Öffentliche Annotationen",
+  "Private annotations only": "Private Annotationen",
+  "Creators": "Erstellt von",
+  "Tags": "Tags",
   "Error": "Fehler",
   "Show annotation list": "Annotationsliste anzeigen",
   "Show annotation filter and color configuration": "Filter- und Farbeinstellungen anzeigen",
