--- a/src/i18n/en/annotation-common.json
+++ b/src/i18n/en/annotation-common.json
@@ -1,4 +1,16 @@
 {
+  "Annotations": "Annotations",
+  "Notes": "Notes",
+  "Annotation Layers": "Annotation Layers",
+  "Active": "Active",
+  "Read-Only": "Read-Only",
+  "Baselayer": "Baselayer",
+  "Visibility": "Visibility",
+  "All Annotations": "All Annotations",
+  "Public annotations only": "Public annotations only",
+  "Private annotations only": "Private annotations only",
+  "Creators": "Creators",
+  "Tags": "Tags",
   "Error": "Error",
   "Show annotation list": "Show annotation list",
   "Show annotation filter and color configuration": "Show annotation filter and color configuration",
