Localized annotation card interstitial

--- a/src/i18n/de/annotation-common.json
+++ b/src/i18n/de/annotation-common.json
@@ -32,6 +32,9 @@
   "Save": "Speichern",
   "Cancel": "Abbrechen",
   "Close": "Schließen",
+  "Show N": "",
+  "more reply": "weitere Antwort",
+  "more replies": "weitere Antworten",
   "With Great Power...": "Aus großer Macht...",
   "...comes great responsibility.": "...folgt große Verantwortung. Du kannst die Annotationen anderer Benutzer ändern weil Du Adminstrator-Rechte auf diesem Dokument hast. Nutze deine Befugnisse verantwortungsbewusst.",
   "Proceed": "Weitermachen",
