--- a/src/i18n/en/annotation-common.json
+++ b/src/i18n/en/annotation-common.json
@@ -6,7 +6,7 @@
   "Read-Only": "Read-Only",
   "Baselayer": "Baselayer",
   "Visibility": "Visibility",
-  "All Annotations": "All Annotations",
+  "All annotations": "All Annotations",
   "Public annotations only": "Public annotations only",
   "Private annotations only": "Private annotations only",
   "Creators": "Creators",
@@ -32,6 +32,9 @@
   "Save": "Save",
   "Cancel": "Cancel",
   "Close": "Close",
+  "Show N": "Show",
+  "more reply": "more reply",
+  "more replies": "more replies",
   "With Great Power...": "With Great Power...",
   "...comes great responsibility.": "...comes great responsibility. You can change other users' annotations because you have administrator privileges on this document. Use your powers responsibly.",
   "Proceed": "Proceed",
