--- a/src/i18n/de/annotation-common.json
+++ b/src/i18n/de/annotation-common.json
@@ -1,4 +1,6 @@
 {
+  "Add a comment": "Kommentar schreiben",
+  "Add a tag": "Tag hinzufügen",
   "Annotations": "Annotationen",
   "Notes": "Notizen",
   "Annotation Layers": "Annotations-Ebenen",
@@ -11,6 +13,12 @@
   "Private annotations only": "Private Annotationen",
   "Creators": "Erstellt von",
   "Tags": "Tags",
+  "Image": "Bild",
+  "Paste a publicly available URL to the image to insert it into your annotation.": "Füge die URL eines öffentlich zugänglichen Bildes ein, um es Deiner Annotation hinzuzufügen.",
+  "Image URL": "Bild URL", 
+  "YouTube Video": "YouTube Video",
+  "Paste a YouTube URL to embed the video into your annotation.": "Füge eine YouTube URL ein, um das Video Deiner Annotation hinzuzufügen.",
+  "YouTube URL": "YouTube URL",
   "Error": "Fehler",
   "Show annotation list": "Annotationsliste anzeigen",
   "Show annotation filter and color configuration": "Filter- und Farbeinstellungen anzeigen",
@@ -25,6 +33,8 @@
   "Comment...": "Kommentar...",
   "Reply...": "Antworten...",
   "Add a tag...": "Neues Tag...",
+  "Link": "Link",
+  "Enter link": "Link einfügen",
   "Edit comment": "Kommentar bearbeiten",
   "Delete annotation": "Annotation löschen",
   "Delete comment": "Kommentar löschen",
@@ -65,10 +75,6 @@
   "First Tag": "Erstes Tag",
   "Tag": "Tag",
   "No tag": "Kein tag",
-  "Enter Image URL": "Enter Image URL",
-  "Enter a publicly available URL to embed the image into your annotation": "Enter a publicly available URL to embed the image into your annotation",
-  "Enter YouTube video URL": "Enter YouTube video URL",
-  "Enter a publicly available YouTube URL to embed the video into your annotation": "Enter a publicly available YouTube URL to embed the video into your annotation",
   "URL": "URL",
   "Back to assignment overview": "Zurück zur Arbeitsauftragsübersicht",
   "Back to project overview": "Zurück zur Projekt-Übersicht",
