--- a/src/i18n/en/annotation-common.json
+++ b/src/i18n/en/annotation-common.json
@@ -1,4 +1,6 @@
 {
+  "Add a comment": "Add a comment",
+  "Add a tag": "Add a tag",
   "Annotations": "Annotations",
   "Notes": "Notes",
   "Annotation Layers": "Annotation Layers",
@@ -11,6 +13,12 @@
   "Private annotations only": "Private annotations only",
   "Creators": "Creators",
   "Tags": "Tags",
+  "Image": "Image",
+  "Paste a publicly available URL to the image to insert it into your annotation.": "Paste a publicly available URL to the image to insert it into your annotation.",
+  "Image URL": "Image URL", 
+  "YouTube Video": "YouTube Video",
+  "Paste a YouTube URL to embed the video into your annotation.": "Paste a YouTube URL to embed the video into your annotation.",
+  "YouTube URL": "YouTube URL",
   "Error": "Error",
   "Show annotation list": "Show annotation list",
   "Show annotation filter and color configuration": "Show annotation filter and color configuration",
@@ -25,6 +33,8 @@
   "Comment...": "Comment...",
   "Reply...": "Reply...",
   "Add a tag...": "Add a tag...",
+  "Link": "Link",
+  "Enter link": "Enter link",
   "Edit comment": "Edit comment",
   "Delete annotation": "Delete annotation",
   "Delete comment": "Delete comment",
