--- a/src/i18n/de/annotation-common.json
+++ b/src/i18n/de/annotation-common.json
@@ -3,6 +3,8 @@
   "Add a tag": "Tag hinzufügen",
   "Annotations": "Annotationen",
   "Notes": "Notizen",
+  "Filters": "Filter",
+  "Pages": "Seiten",
   "Annotation Layers": "Annotations-Ebenen",
   "Active": "Aktiv",
   "Read-Only": "Schreibgeschützt",
