--- a/src/i18n/en/annotation-common.json
+++ b/src/i18n/en/annotation-common.json
@@ -3,6 +3,8 @@
   "Add a tag": "Add a tag",
   "Annotations": "Annotations",
   "Notes": "Notes",
+  "Filters": "Filters",
+  "Pages": "Pages",
   "Annotation Layers": "Annotation Layers",
   "Active": "Active",
   "Read-Only": "Read-Only",
