--- a/src/i18n/de/annotation-common.json
+++ b/src/i18n/de/annotation-common.json
@@ -52,6 +52,7 @@
   "Public_Hint_02": "die Zugriff auf dieses Dokument haben.",
   "Public vs. Private": "Öffentlich vs. Privat",
   "Read-Only": "Schreibgeschützt",
+  "Reply": "Antworten",
   "Save": "Speichern",
   "Show": "Zeige",
   "Show N": "",
