--- a/src/i18n/en/annotation-common.json
+++ b/src/i18n/en/annotation-common.json
@@ -33,7 +33,7 @@
   "Private_Hint_02": "no-one except you.",
   "Delete selected annotation": "Delete selected annotation",
   "Comment...": "Comment...",
-  "Reply...": "Reply...",
+  "Reply": "Reply",
   "Add a tag...": "Add a tag...",
   "Link": "Link",
   "Enter link": "Enter link",
