--- a/src/i18n/de/annotation-common.json
+++ b/src/i18n/de/annotation-common.json
@@ -65,6 +65,7 @@
   "Visibility": "Sichtbarkeit",
   "With Great Power...": "Aus großer Macht...",
   "...comes great responsibility.": "...folgt große Verantwortung. Du kannst die Annotationen anderer Benutzer ändern weil Du Adminstrator-Rechte auf diesem Dokument hast. Nutze deine Befugnisse verantwortungsbewusst.",
+  "Your private annotations": "Deine privaten Annotationen",
   "YouTube URL": "YouTube URL",
   "YouTube Video": "YouTube Video",
   "Zoom in": "Zoom +",
