Finishing touches on color legend popover

--- a/src/i18n/de/annotation-common.json
+++ b/src/i18n/de/annotation-common.json
@@ -30,6 +30,7 @@
   "First Tag": "Erstes Tag",
   "Image": "Bild",
   "Image URL": "Bild URL",
+  "Layer": "Annotations-Ebene",
   "Make annotation public": "Diese Annotation öffentlich machen",
   "more reply": "weitere Antwort",
   "more replies": "weitere Antworten",
