--- a/src/i18n/en/annotation-common.json
+++ b/src/i18n/en/annotation-common.json
@@ -74,6 +74,7 @@
   "Assignment": "Assignment",
   "No Assignment": "No Assignment",
   "Creator": "Creator",
+  "Layer": "Layer",
   "First Tag": "First Tag",
   "Tag": "Tag",
   "No tag": "No tag",
