Added localized title to color legend

--- a/src/i18n/en/annotation-common.json
+++ b/src/i18n/en/annotation-common.json
@@ -71,6 +71,7 @@
   "Public vs. Private": "Public vs. Private",
   "Your private annotations": "Your private annotations",
   "All public annotations": "All public annotations",
+  "Color": "Color",
   "Assignment": "Assignment",
   "No Assignment": "No Assignment",
   "Creator": "Creator",
