--- a/src/i18n/de/annotation-common.json
+++ b/src/i18n/de/annotation-common.json
@@ -14,6 +14,7 @@
   "Cancel": "Abbrechen",
   "Close": "Schließen",
   "Color by": "Farbschema",
+  "Colors": "Farben",
   "Connection Lost.": "Verbindung unterbrochen.",
   "Create new private note": "Neue private Notiz",
   "Create new public note": "Neue öffentliche Notiz",
