--- a/src/i18n/de/annotation-common.json
+++ b/src/i18n/de/annotation-common.json
@@ -21,10 +21,11 @@
   "Creator": "Autor",
   "Creators": "Erstellt von",
   "Delete annotation": "Annotation löschen",
-  "Delete comment": "Kommentar löschen",
+  "Delete reply": "Antwort löschen",
   "Delete note": "Notiz löschen",
   "Delete selected annotation": "Ausgewählte Annotation löschen",
-  "Edit comment": "Kommentar bearbeiten",
+  "Edit annotation": "Annotation bearbeiten",
+  "Edit reply": "Antwort bearbeiten",
   "Enter link": "Link einfügen",
   "Error": "Fehler",
   "Filters": "Filter",
