--- a/src/i18n/en/annotation-common.json
+++ b/src/i18n/en/annotation-common.json
@@ -37,9 +37,10 @@
   "Add a tag...": "Add a tag...",
   "Link": "Link",
   "Enter link": "Enter link",
-  "Edit comment": "Edit comment",
+  "Edit annotation": "Edit annotation",
+  "Edit reply": "Edit reply",
   "Delete annotation": "Delete annotation",
-  "Delete comment": "Delete comment",
+  "Delete reply": "Delete reply",
   "Make annotation public": "Make this annotation public",
   "Save": "Save",
   "Cancel": "Cancel",
