Contextual delete button (plus admin alert) for text toolbar

--- a/src/i18n/en/annotation-common.json
+++ b/src/i18n/en/annotation-common.json
@@ -49,7 +49,7 @@
   "more reply": "more reply",
   "more replies": "more replies",
   "With Great Power...": "With Great Power...",
-  "...comes great responsibility.": "...comes great responsibility. You can change other users' annotations because you have administrator privileges on this document. Use your powers responsibly.",
+  "...comes great responsibility.": "...comes great responsibility. You can edit and delete other users' annotations because you have administrator privileges. Use your superpowers wisely.",
   "Proceed": "Proceed",
   "Show": "Show",
   "Filter annotations by": "Filter annotations by",
