--- a/src/i18n/de/annotation-common.json
+++ b/src/i18n/de/annotation-common.json
@@ -67,7 +67,7 @@
   "URL": "URL",
   "Visibility": "Sichtbarkeit",
   "With Great Power...": "Aus großer Macht...",
-  "...comes great responsibility.": "...folgt große Verantwortung. Du kannst die Annotationen anderer Benutzer ändern weil Du Adminstrator-Rechte auf diesem Dokument hast. Nutze deine Befugnisse verantwortungsbewusst.",
+  "...comes great responsibility.": "...folgt große Verantwortung. Du kannst die Annotationen anderer Benutzer ändern und löschen weil Du Adminstrator-Rechte hast. Nutze Deine Superkräfte mit Bedacht.",
   "Your private annotations": "Deine privaten Annotationen",
   "YouTube URL": "YouTube URL",
   "YouTube Video": "YouTube Video",
