https://github.com/performant-software/vico/issues/266

--- a/src/i18n/de/annotation-common.json
+++ b/src/i18n/de/annotation-common.json
@@ -72,5 +72,6 @@
   "YouTube URL": "YouTube URL",
   "YouTube Video": "YouTube Video",
   "Zoom in": "Zoom +",
-  "Zoom out": "Zoom -"
+  "Zoom out": "Zoom -",
+  "Show Annotations": "Show Annotations"
 }
