--- a/src/i18n/en/notifications.json
+++ b/src/i18n/en/notifications.json
@@ -2,11 +2,9 @@
   "Notifications": "Notifications",
   "You're up to date!": "You're up to date!",
   "No notifications": "No notifications",
-
   "Invitation": "${sender} invites you to join <strong>${project}</strong>.",
-
   "Accept": "Accept",
   "Ignore": "Ignore",
-
-  "Confirmed": "<strong>${project}</strong> has been added to your Dashboard. You will find it under 'All' and 'Shared with me'."
+  "Confirmed-student": "<strong>${project}</strong> has been added to your Dashboard. You will find it 'My Projects'.",
+  "Confirmed-creator": "<strong>${project}</strong> has been added to your Dashboard. You will find it 'Shared with me'."
 }
