Implemented expanded project description

--- a/src/i18n/de/project-home.json
+++ b/src/i18n/de/project-home.json
@@ -69,5 +69,7 @@
   "Published Date": "Published Date",
   "Revision Count": "Revision Count",
   "Select Revision": "Select Revision",
-  "Latest Revision": "Latest Revision"
+  "Latest Revision": "Latest Revision",
+  "Show More": "Show More",
+  "Show Less": "Show Less"
 }
