--- a/src/i18n/en/project-home.json
+++ b/src/i18n/en/project-home.json
@@ -68,5 +68,7 @@
   "Published Date": "Published Date",
   "Revision Count": "Revision Count",
   "Select Revision": "Select Revision",
-  "Latest Revision": "Latest Revision"
+  "Latest Revision": "Latest Revision",
+  "Show More": "Show More",
+  "Show Less": "Show Less"
 }
